--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                                 <i class="fas text-warning fa-star"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                Tring Creatives turned our ideas into bold, beautiful designs—logos, POSMs &
-                                packaging—that truly reflect our brand’s story.
+                                Tring Creatives turned our ideas into bold, beautiful LBLs, POSMs, logos & packaging.
+                                Fresh, impactful, and true to our brand.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
@@ -453,8 +453,8 @@
                                 <i class="fas text-warning fa-star"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                Their flawless transcreation captures cultural nuance, making every campaign powerful
-                                and spot-on for each target market.
+                                Tring Creatives’ flawless transcreation is precise, culturally spot-on & powerful. Our
+                                go-to for high-stakes multilingual campaigns.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
@@ -476,8 +476,8 @@
                                 <i class="fas text-warning fa-star"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                They deliver top-quality creatives at speed, meeting tight multi-market deadlines
-                                without a single compromise in quality.
+                                Tring Creatives delivers top-quality, on-time multi-market adaptations & creatives and
+                                are our seamless, high-speed creative powerhouse.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
@@ -569,8 +569,8 @@
                                 <i class="fas text-warning fa-star"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                They deliver top-quality creatives at speed, meeting tight multi-market deadlines
-                                without a single compromise in quality.
+                                Tring Creatives delivers top-quality, on-time multi-market adaptations & creatives and
+                                are our seamless, high-speed creative powerhouse.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
@@ -598,7 +598,7 @@
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
                     </div>
-                </div> 
+                </div>
             </div>
         </div>
     </section>
