--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@
                                 <i class="fas text-warning fa-star-half-alt"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                Tring Creatives turned our concepts into stunning, impactful Visual Aids & LBLs that
-                                perfectly reflect our vision and engage our audience.
+                                Tring Creatives transformed our ideas into visually stunning, strategic Visual Aids &
+                                LBLs that truly connect and lead our audience.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
@@ -592,8 +592,8 @@
                                 <i class="fas text-warning fa-star-half-alt"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                Tring Creatives turned our concepts into stunning, impactful Visual Aids & LBLs that
-                                perfectly reflect our vision and engage our audience.
+                                Tring Creatives transformed our ideas into visually stunning, strategic Visual Aids &
+                                LBLs that truly connect and lead our audience.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
