--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
                     <div class="collapse w-100 navbar-collapse d-none d-lg-flex justify-content-between">
                         <ul class="navbar-nav glassy-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Services</a>
+                                <a class="nav-link text-white" href="#about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Tools</a>
+                                <a class="nav-link text-white" href="#services">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">FAQ</a>
+                                <a class="nav-link text-white" href="#clients">Clients</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#testimonials">Testimonials</a>
                             </li>
                         </ul>
                         <a href="#" class="btn btn-contact">Contact</a>
@@ -125,7 +128,7 @@
         <img src="./assets/images/gifs/background-loop.gif" alt="Background" class="bg-gif" />
     </section>
 
-    <section class="sec-py global-voice-section">
+    <section id="about-us" class="sec-py global-voice-section">
         <div class="container">
             <div class="d-flex mb-5">
                 <div class="col-lg-8">
@@ -181,7 +184,7 @@
         </div>
     </section>
 
-    <section class="services-section">
+    <section id="services" class="services-section">
         <h2 class="services-title fs-1">OUR SERVICES</h2>
         <div class="services-grid container">
             <div class="service-slider-wrapper position-relative overflow-hidden">
@@ -379,7 +382,7 @@
 
 
 
-    <section class="clients-circle-section">
+    <section id="clients" class="clients-circle-section">
         <div class="circle-wrapper container">
             <div class="circle-center">
                 <h2>100+ Clients</h2>
@@ -409,7 +412,7 @@
         </div>
     </section>
 
-    <section class="testimonials-section">
+    <section id="testimonials" class="testimonials-section">
         <h2 class="text-white mb-5">Testimonials</h2>
         <div class="swiper testimonial-swiper">
             <div class="swiper-wrapper">
@@ -617,11 +620,11 @@
             <div class="row h-100 align-items-end">
                 <div class="col-lg-4 col-md-12 col-6">
                     <ul class="footer-links">
-                        <li><a href="#" data-text="Work">Work</a></li>
-                        <li><a href="#" data-text="Services">Services</a></li>
-                        <li><a href="#" data-text="Tools">Tools</a></li>
-                        <li><a href="#" data-text="About">About</a></li>
-                        <li><a href="#" data-text="Contact">Contact</a></li>
+                        <li><a href="#about-us" data-text="About us">About us</a></li>
+                        <li><a href="#services" data-text="Services">Services</a></li>
+                        <li><a href="#clients" data-text="Clients">Clients</a></li>
+                        <li><a href="#testimonials" data-text="Testimonials">Testimonials</a></li>
+                        <li><a href="#" class="footer-contact-link" data-text="Contact Us">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-6 d-block d-lg-none">
