--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
                         <div class="offcanvas-body d-block d-lg-none">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Services</a>
+                                    <a class="nav-link text-white" href="#about-us">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Tools</a>
+                                    <a class="nav-link text-white" href="#services">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">FAQ</a>
+                                    <a class="nav-link text-white" href="#clients">Clients</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#testimonials">Testimonials</a>
                                 </li>
                             </ul>
                             <div class="d-grid mt-4">
@@ -379,8 +382,6 @@
             });
         });
     </script>
-
-
 
     <section id="clients" class="clients-circle-section">
         <div class="circle-wrapper container">
