--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,16 +37,19 @@
                     <div class="collapse w-100 navbar-collapse d-none d-lg-flex justify-content-between">
                         <ul class="navbar-nav glassy-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Services</a>
+                                <a class="nav-link text-white" href="index.html#about-us">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Tools</a>
+                                <a class="nav-link text-white" href="index.html#services">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">FAQ</a>
+                                <a class="nav-link text-white" href="index.html#clients">Clients</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="index.html#testimonials">Testimonials</a>
                             </li>
                         </ul>
                         <a href="#" class="btn btn-contact">Contact</a>
@@ -68,16 +71,19 @@
                         <div class="offcanvas-body d-block d-lg-none">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Services</a>
+                                    <a class="nav-link text-white" href="index.html#about-us">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Tools</a>
+                                    <a class="nav-link text-white" href="index.html#services">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">FAQ</a>
+                                    <a class="nav-link text-white" href="index.html#clients">Clients</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="index.html#testimonials">Testimonials</a>
                                 </li>
                             </ul>
                             <div class="d-grid mt-4">
@@ -150,11 +156,11 @@
             <div class="row h-100 align-items-end">
                 <div class="col-lg-4 col-md-12 col-6">
                     <ul class="footer-links">
-                        <li><a href="#" data-text="Work">Work</a></li>
-                        <li><a href="#" data-text="Services">Services</a></li>
-                        <li><a href="#" data-text="Tools">Tools</a></li>
-                        <li><a href="#" data-text="About">About</a></li>
-                        <li><a href="#" data-text="Contact">Contact</a></li>
+                        <li><a href="index.html#about-us" data-text="About us">About us</a></li>
+                        <li><a href="index.html#services" data-text="Services">Services</a></li>
+                        <li><a href="index.html#clients" data-text="Clients">Clients</a></li>
+                        <li><a href="index.html#testimonials" data-text="Testimonials">Testimonials</a></li>
+                        <li><a href="#" class="footer-contact-link" data-text="Contact Us">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-6 d-block d-lg-none">
@@ -169,7 +175,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="copyright-section">
-                        <a href="#" class="privacy-link">Privacy Policy</a>
+                        <a href="./privacy-policy.html" class="privacy-link">Privacy Policy</a>
                         <p class="copyright-text">
                             Copyright © 2025 Tring Creatives.
                         </p>
