--- a/index.html
+++ b/index.html
@@ -96,7 +96,24 @@
             </nav>
         </div>
     </header>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const menu = document.getElementById("mobileMenu");
+            const offcanvas = bootstrap.Offcanvas.getOrCreateInstance(menu);
 
+            menu.querySelectorAll(".nav-link[href^='#']").forEach(link => {
+                link.addEventListener("click", e => {
+                    e.preventDefault();
+                    const id = link.getAttribute("href");
+                    offcanvas.hide();
+                    menu.addEventListener("hidden.bs.offcanvas", () =>
+                        document.querySelector(id)?.scrollIntoView({ behavior: "smooth" }),
+                        { once: true });
+                });
+            });
+        });
+
+    </script>
     <section class="hero-section">
         <div class="container">
             <div class="row justify-content-center text-center">
