--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="collapse w-100 navbar-collapse d-none d-lg-flex justify-content-between">
                         <ul class="navbar-nav glassy-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="#about-us">About Us</a>
@@ -71,7 +71,7 @@
                         <div class="offcanvas-body d-block d-lg-none">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+                                    <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" href="#about-us">About Us</a>
@@ -96,24 +96,7 @@
             </nav>
         </div>
     </header>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const menu = document.getElementById("mobileMenu");
-            const offcanvas = bootstrap.Offcanvas.getOrCreateInstance(menu);
-
-            menu.querySelectorAll(".nav-link[href^='#']").forEach(link => {
-                link.addEventListener("click", e => {
-                    e.preventDefault();
-                    const id = link.getAttribute("href");
-                    offcanvas.hide();
-                    menu.addEventListener("hidden.bs.offcanvas", () =>
-                        document.querySelector(id)?.scrollIntoView({ behavior: "smooth" }),
-                        { once: true });
-                });
-            });
-        });
-
-    </script>
+  
     <section class="hero-section">
         <div class="container">
             <div class="row justify-content-center text-center">
@@ -350,55 +333,6 @@
             </div>
         </div>
     </section>
-    <script>
-        document.querySelectorAll('.service-slider-wrapper').forEach(wrapper => {
-            const cardOne = wrapper.querySelector('.card-one');
-            const cardTwo = wrapper.querySelector('.card-two');
-
-            let showingCard = 1;
-            let lastDirection = 'right';
-
-            function resetClasses(element) {
-                element.classList.remove(
-                    'slide-in-left',
-                    'slide-in-right',
-                    'slide-out-left',
-                    'slide-out-right',
-                    'active'
-                );
-            }
-
-            function showCardOne() {
-                resetClasses(cardTwo);
-                resetClasses(cardOne);
-
-                cardTwo.classList.add(lastDirection === 'right' ? 'slide-out-left' : 'slide-out-right');
-                cardOne.classList.add('active', lastDirection === 'right' ? 'slide-in-right' : 'slide-in-left');
-
-                showingCard = 1;
-                lastDirection = lastDirection === 'right' ? 'left' : 'right';
-            }
-
-            function showCardTwo() {
-                resetClasses(cardOne);
-                resetClasses(cardTwo);
-
-                cardOne.classList.add(lastDirection === 'right' ? 'slide-out-left' : 'slide-out-right');
-                cardTwo.classList.add('active', lastDirection === 'right' ? 'slide-in-right' : 'slide-in-left');
-
-                showingCard = 2;
-                lastDirection = lastDirection === 'right' ? 'left' : 'right';
-            }
-
-            cardOne.addEventListener('click', () => {
-                if (showingCard === 1) showCardTwo();
-            });
-
-            cardTwo.addEventListener('click', () => {
-                if (showingCard === 2) showCardOne();
-            });
-        });
-    </script>
 
     <section id="clients" class="clients-circle-section">
         <div class="circle-wrapper container">
