--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,7 +37,7 @@
                     <div class="collapse w-100 navbar-collapse d-none d-lg-flex justify-content-between">
                         <ul class="navbar-nav glassy-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="index.html#about-us">About Us</a>
@@ -71,7 +71,7 @@
                         <div class="offcanvas-body d-block d-lg-none">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+                                    <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" href="index.html#about-us">About Us</a>
