--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <div class="row justify-content-center text-center">
                 <div class="col-lg-10">
                     <div class="hero-content">
-                        <p class="hero-subtitle">
-                            Seamlessly Bridging Language,<br>Culture and Design
+                        <p class="hero-subtitle text-white fw-bold">
+                            Beyond Translation. Beyond Design. <br> Beyond Borders.
                         </p>
                         <h1 class="hero-title">
                             <span class="language-slider" id="languageSlider">
