--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="col-lg-10">
                     <div class="hero-content">
                         <p class="hero-subtitle text-white fw-bold">
-                            Beyond Translation. Beyond Design. <br> Beyond Borders.
+                            Beyond Translation. Beyond Design. Beyond Borders.
                         </p>
                         <h1 class="hero-title">
                             <span class="language-slider" id="languageSlider">
