--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="container-fluid">
 
                     <!-- Logo -->
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand me-0" href="index.html">
                         <img src="./assets/images/logo/logo.svg" class="logo" alt="Tring Creatives" height="40">
                     </a>
 
