--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container px-0">
             <nav class="navbar navbar-expand-lg py-3">
-                <div class="container-fluid">
+                <div class="container-fluid px-0">
 
                     <!-- Logo -->
                     <a class="navbar-brand me-0" href="index.html">
@@ -116,7 +116,7 @@
                                 <span class="language-text">ترينج</span>
                             </span> <span>CREATIVES</span>
                         </h1>
-                        <a href="#" class="btn-hear-from-us">Hear from Us</a>
+                        <!-- <a href="#" class="btn-hear-from-us">Hear from Us</a> -->
                     </div>
                 </div>
             </div>
