update testimonial images

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/dr-reddy.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Dr Reddy's Laboratories Ltd.</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -398,7 +398,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/chroma.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Tata Croma</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -421,7 +421,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/aditya-birla.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Aditya Brila Group</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -444,7 +444,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/mankind-pharma.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Mankind Pharma</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -468,7 +468,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/dr-reddy.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Dr Reddy's Laboratories Ltd.</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -491,7 +491,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/chroma.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Tata Croma</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -514,7 +514,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/aditya-birla.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Aditya Brila Group</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -537,7 +537,7 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/mankind-pharma.jpg" alt="Avatar" class="avatar-img mb-3">
                             <h4 class="text-dark">Mankind Pharma</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
