--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 <!-- Form Container -->
                 <div id="formContainer">
                     <h2><span>Ring us</span> now!</h2>
-                    <p class="text-dark">Contact us if you need further assistance.</p>
+                    <p class="text-dark">Reach Out. Stand Out. Let’s Go!</p>
 
                     <form id="contactForm">
                         <div class="form-group">
