--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="service">Service *</label>
+                            <label for="service">Services You’re Interested In *</label>
                             <input type="text" id="service" name="service" class="form-control">
                             <div class="error-message" id="serviceError"></div>
                         </div>
