--- a/index.html
+++ b/index.html
@@ -615,11 +615,11 @@
     <div id="myModal" class="modal">
         <div class="modal-content d-flex flex-row flex-wrap align-items-center col-lg-12">
             <!-- Left Side Image -->
-            <div class="modal-left d-lg-block d-none col-lg-6">
+            <!-- <div class="modal-left d-lg-block d-none col-lg-6">
                 <img src="./assets/images/banner/bell-bg.png" alt="Offer Image">
-            </div>
+            </div> -->
             <!-- Right Side Form -->
-            <div class="modal-right col-lg-6 col-12">
+            <div class="modal-right col-lg-12 col-12">
                 <span class="close">&times;</span>
 
                 <!-- Success Message -->
