--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -199,11 +199,11 @@
     <div id="myModal" class="modal">
         <div class="modal-content d-flex flex-row flex-wrap align-items-center col-lg-12">
             <!-- Left Side Image -->
-            <div class="modal-left d-lg-block d-none col-lg-6">
+            <!-- <div class="modal-left d-lg-block d-none col-lg-6">
                 <img src="./assets/images/banner/bell-bg.png" alt="Offer Image">
-            </div>
+            </div> -->
             <!-- Right Side Form -->
-            <div class="modal-right col-lg-6 col-12">
+            <div class="modal-right col-lg-12 col-12">
                 <span class="close">&times;</span>
 
                 <!-- Success Message -->
@@ -223,7 +223,7 @@
                 <!-- Form Container -->
                 <div id="formContainer">
                     <h2><span>Ring us</span> now!</h2>
-                    <p class="text-dark">Contact us if you need further assistance.</p>
+                    <p class="text-dark">Reach Out. Stand Out. Let’s Go!</p>
 
                     <form id="contactForm">
                         <div class="form-group">
@@ -244,7 +244,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="service">Service *</label>
+                            <label for="service">Services You’re Interested In *</label>
                             <input type="text" id="service" name="service" class="form-control">
                             <div class="error-message" id="serviceError"></div>
                         </div>
