--- a/index.html
+++ b/index.html
@@ -165,7 +165,15 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4 divider">
+                    <div class="col-md-4 divider d-lg-block d-none">
+                        <div>
+                            <div class="stat-number">
+                                <span class="count me-2" data-count="1">0</span>Lac<span class="stat-txt"> +</span>
+                            </div>
+                            <div class="stat-label">Artworks Delivered</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 divider d-lg-none d-block">
                         <div>
                             <div class="stat-number">
                                 <span class="count me-2" data-count="01">0</span>Lac<span class="stat-txt"> +</span>
