--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
         <div class="container px-0">
             <nav class="navbar navbar-expand-lg py-3">
-                <div class="container-fluid px-0">
+                <div class="container-fluid px-lg-0">
 
                     <!-- Logo -->
                     <a class="navbar-brand me-0" href="index.html">
