--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
 
                     <!-- Hamburger / Offcanvas Trigger -->
-                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
+                    <button class="navbar-toggler border-0 px-1" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-label="Toggle navigation">
                         <i class="fas fa-bars text-white fa-lg"></i>
                     </button>
