--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <div class="card-content text-start">
                                     <!-- <h4><strong>Tring</strong> Creatives</h4> -->
                                     <h2>Transcreation</strong> - More Than Just Translation</h2>
-                                    <p class="fw-bold fs-3">Conquer Every Market with Native Precision</p>
+                                    <p class="fw-bold fs-3 subtitle">Conquer Every Market with Native Precision</p>
                                     <p>Tring Creatives goes beyond translation; powering your brand with not just
                                         accurate language but with inspiration that sells.
                                     </p>
@@ -231,7 +231,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 ps-4">
                                 <div class="card-img">
                                     <img class="w-100" src="./assets/images/service/card-1.jpeg" alt="">
                                 </div>
@@ -261,7 +261,7 @@
                                 <div class="card-content text-start">
                                     <!-- <h4><strong>Tring</strong> Creatives</h4> -->
                                     <h2>High-Volume Adaptations</h2>
-                                    <p class="fw-bold fs-3">From One Creative to Thousands - Fast, Flawless, and On Time!</p>
+                                    <p class="fw-bold fs-3 subtitle">From One Creative to Thousands - Fast, Flawless, and On Time!</p>
                                     <p>
                                         When your campaign needs to be everywhere in every size, format, and medium,
                                         we've got you covered. At Tring Creatives, we’re built for scale. With a proven
@@ -306,7 +306,7 @@
                                 <div class="card-content text-start">
                                     <!-- <h4><strong>Tring</strong> Creatives</h4> -->
                                     <h2>Branding Services</h2>
-                                    <p class="fw-bold fs-3">Your Brand. Elevated. Everywhere</p>
+                                    <p class="fw-bold fs-3 subtitle">Your Brand. Elevated. Everywhere</p>
                                     <p>
                                         Your brand is more than a logo, it’s an experience! Our team of visionary art
                                         directors, visualisers, and designers craft a visual language that sells your
