--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <!-- Second Card -->
                 <div class="service-card p-0 card-two">
                     <div class="card h-100">
-                        <div class="card-body row">
+                        <div class="card-body row align-items-center">
                             <div class="col-lg-8">
                                 <div class="card-content text-start">
                                     <!-- <h4><strong>Tring</strong> Creatives</h4> -->
@@ -301,7 +301,7 @@
                 <!-- Second Card -->
                 <div class="service-card p-0 card-two">
                     <div class="card h-100">
-                        <div class="card-body row">
+                        <div class="card-body row card-body row">
                             <div class="col-lg-8">
                                 <div class="card-content text-start">
                                     <!-- <h4><strong>Tring</strong> Creatives</h4> -->
