--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </nav>
         </div>
     </header>
-  
+
     <section class="hero-section">
         <div class="container">
             <div class="row justify-content-center text-center">
@@ -200,9 +200,10 @@
         <div class="services-grid container">
             <div class="service-slider-wrapper position-relative overflow-hidden">
                 <!-- First Card -->
-                <div class="service-card p-0 card-one active">
+                <div class="service-card position-relative p-0 card-one active">
                     <img src="./assets/images/gifs/path-to-your-translations.gif" alt="Translations"
                         class="service-image h-100">
+                    <a href="javascript:void(0);" class="btn btn-service">Know More</a>
                 </div>
                 <!-- Second Card -->
                 <div class="service-card p-0 card-two">
@@ -249,9 +250,10 @@
 
             <div class="service-slider-wrapper position-relative overflow-hidden">
                 <!-- First Card -->
-                <div class="service-card p-0 card-one active">
+                <div class="service-card p-0 position-relative card-one active">
                     <img src="./assets/images/gifs/path-to-your-adaptions.gif" alt="Translations"
                         class="service-image h-100">
+                    <a href="javascript:void(0);" class="btn bg-dark text-white btn-service">Know More</a>
                 </div>
                 <!-- Second Card -->
                 <div class="service-card p-0 card-two">
@@ -261,7 +263,8 @@
                                 <div class="card-content text-start">
                                     <!-- <h4><strong>Tring</strong> Creatives</h4> -->
                                     <h2>High-Volume Adaptations</h2>
-                                    <p class="fw-bold fs-3 subtitle">From One Creative to Thousands - Fast, Flawless, and On Time!</p>
+                                    <p class="fw-bold fs-3 subtitle">From One Creative to Thousands - Fast, Flawless,
+                                        and On Time!</p>
                                     <p>
                                         When your campaign needs to be everywhere in every size, format, and medium,
                                         we've got you covered. At Tring Creatives, we’re built for scale. With a proven
@@ -294,9 +297,10 @@
 
             <div class="service-slider-wrapper position-relative overflow-hidden">
                 <!-- First Card -->
-                <div class="service-card p-0 card-one active">
+                <div class="service-card position-relative p-0 card-one active">
                     <img src="./assets/images/gifs/path-to-your-branding.gif" alt="Translations"
                         class="service-image h-100">
+                    <a href="javascript:void(0);" class="btn btn-service">Know More</a>
                 </div>
                 <!-- Second Card -->
                 <div class="service-card p-0 card-two">
@@ -383,7 +387,8 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/dr-reddy.jpg" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/dr-reddy.jpg" alt="Avatar"
+                                class="avatar-img mb-3">
                             <h4 class="text-dark">Dr Reddy's Laboratories Ltd.</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -429,7 +434,8 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/aditya-birla.jpg" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/aditya-birla.jpg" alt="Avatar"
+                                class="avatar-img mb-3">
                             <h4 class="text-dark">Aditya Brila Group</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -452,7 +458,8 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/mankind-pharma.jpg" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/mankind-pharma.jpg" alt="Avatar"
+                                class="avatar-img mb-3">
                             <h4 class="text-dark">Mankind Pharma</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -476,7 +483,8 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/dr-reddy.jpg" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/dr-reddy.jpg" alt="Avatar"
+                                class="avatar-img mb-3">
                             <h4 class="text-dark">Dr Reddy's Laboratories Ltd.</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -522,7 +530,8 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/aditya-birla.jpg" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/aditya-birla.jpg" alt="Avatar"
+                                class="avatar-img mb-3">
                             <h4 class="text-dark">Aditya Brila Group</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
@@ -545,7 +554,8 @@
                             <img src="./assets/images/testimonial-img/card-border.svg" alt="">
                         </div>
                         <div class="testimonial-content text-center">
-                            <img src="./assets/images/testimonial-img/mankind-pharma.jpg" alt="Avatar" class="avatar-img mb-3">
+                            <img src="./assets/images/testimonial-img/mankind-pharma.jpg" alt="Avatar"
+                                class="avatar-img mb-3">
                             <h4 class="text-dark">Mankind Pharma</h4>
                             <div class="ratings mb-2">
                                 <i class="fas text-warning fa-star"></i>
