--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     </p>
                                     <p>
                                         Every translation undergoes rigorous <strong>proofreading</strong> and
-                                        <strong>multi-stage QC</strong> , ensuring
+                                        <strong>multi-stage QC</strong>, ensuring
                                         your message is spot-on, culturally relevant, and market-ready. Whether it's
                                         <strong>packaging, ads, websites, or social media,</strong>
                                         we help your brand cut through
@@ -293,7 +293,7 @@
             </div>
             <div class="service-content pt-0">
                 <img src="./assets/images/icons/path-to-icon2.svg" alt="Icon" class="service-icon">
-                <h3>Adapti<span>o</span>ns</h3>
+                <h3>High-Volume Adaptati<span>o</span>ns</h3>
                 <p>From One Creative to Thousands - Fast, Flawless, and On Time!</p>
             </div>
 
