--- a/thank-you.html
+++ b/thank-you.html
@@ -99,45 +99,91 @@
 
     <main class="privacy-policy py-5">
         <div class="container">
-            <h1 class="text-center mb-4">Privacy Policy</h1>
-            <p>Effective Date: January 1, 2025</p>
+            <div class="thank-you-container">
+                <div class="success-icon">
+                    <i class="fas fa-check-circle"></i>
+                </div>
 
-            <h4 class="mt-4">Introduction</h4>
-            <p>Welcome to Tring Creatives! We value your privacy and are committed to protecting your personal data.
-                This Privacy Policy outlines how we collect, use, and safeguard your information.</p>
+                <h1>Thank You!</h1>
+                <h2>Your Message Has Been Sent Successfully</h2>
 
-            <h4 class="mt-4">Information We Collect</h4>
-            <ul>
-                <li><strong>Personal Data:</strong> Name, email address, phone number, etc.</li>
-                <li><strong>Usage Data:</strong> Information about how you use our website and services.</li>
-                <li><strong>Cookies:</strong> We use cookies to enhance your experience on our site.</li>
-            </ul>
+                <p>We appreciate you reaching out to <strong>Tring Creatives</strong>. Your inquiry is important to us,
+                    and we'll get back to you within 24 hours.</p>
 
-            <h4 class="mt-4">How We Use Your Information</h4>
-            <p>Your information may be used for the following purposes:</p>
-            <ul>
-                <li>To provide and maintain our services.</li>
-                <li>To notify you about changes to our services.</li>
-                <li>To allow you to participate in interactive features when you choose to do so.</li>
-                <li>To provide customer support.</li>
-                <li>To gather analysis or valuable information so that we can improve our services.</li>
-            </ul>
+                <div class="features">
+                    <div class="feature">
+                        <div class="feature-icon">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                        <h3>Quick Response</h3>
+                        <p>We'll respond within 24 hours</p>
+                    </div>
 
-            <h4 class="mt-4">Data Security</h4>
-            <p>We take the security of your personal data seriously and implement appropriate technical and
-                organizational measures to protect it from unauthorized access, loss, or misuse.</p>
+                    <div class="feature">
+                        <div class="feature-icon">
+                            <i class="fas fa-lightbulb"></i>
+                        </div>
+                        <h3>Creative Solutions</h3>
+                        <p>Tailored strategies for your business</p>
+                    </div>
 
-            <h4 class="mt-4">Your Rights</h4>
-            <p>You have the right to request access to the personal data we hold about you, to request correction of any
-                inaccuracies, and to request deletion of your personal data under certain conditions.</p>
+                    <div class="feature">
+                        <div class="feature-icon">
+                            <i class="fas fa-handshake"></i>
+                        </div>
+                        <h3>Professional Service</h3>
+                        <p>Committed to your success</p>
+                    </div>
+                </div>
 
-            <h4 class="mt-4">Changes to This Privacy Policy</h4>
-            <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new
-                Privacy Policy on this page.</p>
+                <div class="cta-buttons">
+                    <a href="index.html" class="btn btn-primary">
+                        <i class="fas fa-home"></i> Back to Homepage
+                    </a>
+                    <a href="services.html" class="btn btn-outline">
+                        <i class="fas fa-briefcase"></i> Our Services
+                    </a>
+                </div>
 
-            <h4 class="mt-4">Contact Us</h4>
-            <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-            <p>Email: <a class="text-white" href="mailto:contact@tringcreatives.com">contact@tringcreatives.com</a></p>
+                <div class="contact-info">
+                    <h3>Need Immediate Assistance?</h3>
+                    <div class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        <span>+91 12345 67890</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <span>hello@tringcreatives.com</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Pune, Maharashtra</span>
+                    </div>
+                </div>
+            </div>
+
+            <script>
+                // Optional: Auto redirect to homepage after 30 seconds
+                // setTimeout(() => {
+                //     if (confirm('Would you like to return to the homepage?')) {
+                //         window.location.href = 'index.html';
+                //     }
+                // }, 30000);
+
+                // Add some interactive elements
+                document.addEventListener('DOMContentLoaded', function () {
+                    // Add click effect to buttons
+                    const buttons = document.querySelectorAll('.btn');
+                    buttons.forEach(btn => {
+                        btn.addEventListener('click', function () {
+                            this.style.transform = 'scale(0.95)';
+                            setTimeout(() => {
+                                this.style.transform = '';
+                            }, 100);
+                        });
+                    });
+                });
+            </script>
         </div>
     </main>
 
