Remove redundant ID from contact form for cleaner markup

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 <h2><span>Ring us</span> now!</h2>
                 <p class="text-dark">Reach Out. Stand Out. Let’s Go!</p>
 
-                <form id="contactForm" action="mail.php" method="POST" onsubmit="return validateForm()">
+                <form action="mail.php" method="POST" onsubmit="return validateForm()">
                     <div class="form-group">
                         <label for="name">Name *</label>
                         <input type="text" id="name" name="name" class="form-control" required>
