--- a/thank-you.html
+++ b/thank-you.html
@@ -14,6 +14,19 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <style>
+        .btn-no-hover {
+            background-color: #ea5d49 !important;
+            /* Bootstrap primary color */
+            border-color: #ea5d49 !important;
+        }
+
+        .btn-no-hover:hover {
+            background-color: #ea5d49 !important;
+            border-color: #ea5d49 !important;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -121,16 +134,14 @@
 
                             <!-- Button -->
                             <div class="mt-4">
-                                <a href="index.html" class="btn btn-primary px-4">
+                                <a href="index.html" class="btn btn-primary btn-no-hover px-4">
                                     <i class="fas fa-home"></i> Back to Homepage
                                 </a>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
