add company name field

--- a/index.html
+++ b/index.html
@@ -673,12 +673,17 @@
                         <input type="tel" id="phone" name="phone" class="form-control" required>
                         <div class="error-message" id="phoneError"></div>
                     </div>
+
                     <div class="form-group">
                         <label for="email">Email *</label>
                         <input type="email" id="email" name="email" class="form-control" required>
                         <div class="error-message" id="emailError"></div>
                     </div>
-
+                    <div class="form-group">
+                        <label for="company_name">Company Name *</label>
+                        <input type="text" id="company_name" name="company_name" class="form-control" required>
+                        <div class="error-message" id="company_nameError"></div>
+                    </div>
                     <div class="form-group">
                         <label for="service">Services You’re Interested In *</label>
                         <input type="text" id="service" name="service" class="form-control" required>
